# synapse

./: .gitignore  Cargo.toml
base/ReceiverFunnel/: Cargo.toml  README.md
base/ReceiverFunnel/src/: lib.rs  receiver_funnel.rs
base/all_sol_types/: Cargo.toml
base/all_sol_types/src/: lib.rs  sol_types.rs
base/cortex/: Cargo.toml
base/cortex/src/: cortex.rs  integration.rs  lib.rs  types.rs
base/shape/: Cargo.toml
base/shape/src/: d_any.rs  id_address.rs  lib.rs  p_any.rs  p_config.rs  p_key.rs  p_state.rs  p_ticks.rs  t_any.rs
base/v3/: Cargo.toml
base/v3/src/: lib.rs
base/v3/src/v3_base/: bitmap.rs  bitmap_math.rs  err.rs  mod.rs  states.rs  tick_math.rs  ticks.rs  trade_math.rs  v3_state.rs  x96price_math.rs
synapse/: Cargo.toml
synapse/src/: calls.rs  main.rs  master_context.rs  pool_event.rs  token_event.rs  v4_fetcher.rs
